# openHabAI

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md
catflow/: README.md  client-typescript
catflow/cpp/: CMakeLists.txt
catflow/cpp/include/: ApiJsonObject.h  ApiMessage.h  ApiProcessible.h  ApiRoute.h  ApiSubscribable.h  Catflow.h  Chart.h  Frontend.h  JsonList.h  JsonObject.h  Util.h
catflow/cpp/include/server/: ApiSeasocksServer.h  ApiServer.h  ApiuWebsocketsServer.h
catflow/cpp/include/util/: Filesystem.h  Log.h  TaskManager.h  util.h
catflow/cpp/source/: ApiJsonObject.cpp  ApiRoute.cpp  ApiSubscribable.cpp  Catflow.cpp  Chart.cpp  Frontend.cpp  JsonList.tpp  JsonObject.tpp
catflow/cpp/source/util/: Filesystem.cpp  Log.cpp  TaskManager.cpp
catflow/cpp/test/: ApiTest.cpp  ChartTest.cpp  DebugTest.cpp.cpp  JsonListTest.cpp  JsonObjectTest.cpp
catflow/cpp/test/uWebsocketsExample/: CMakeLists.txt  index.html  uWebsockets-example.cpp
catflow/doc/: README.md
catflow/doc/uml/: cppUml.xmi
catflow/example/: CMakeLists.txt  README.md  main.cpp
catflow/source/api/: ApiMessage.h  ApiSubscribable.h  Chart.h
catflow/source/include/: ApiJsonObject.h  ApiProcessible.h  ApiRoute.h  JsonList.h
doc/: README.md  Untitled Diagram.drawio  build.md
frontend/: .bowerrc  .gitignore  CMakeLists.txt  Gulpfile.js  README.md  REAME.md  bower.json  index.html  indexMaterialLite.html  package.json
frontend-angular/: .angular-cli.json  README.md  angular.json  package-lock.json  package.json  tsconfig.json
frontend-angular/src/: index.html  styles.css  typings.d.ts
frontend-angular/src/app/: app.module.ts
frontend-angular/src/app/app-main/: app-main.component.html  app-main.component.ts
frontend-angular/src/app/backend-console/: backend-console.component.html  backend-console.component.ts  backend-console.components.css
frontend-angular/src/app/data-structures/: data-structures.component.html  data-structures.component.ts
frontend-angular/src/app/datastructure-and-settings/: datastructure-and-settings.component.html  datastructure-and-settings.component.ts
frontend-angular/src/app/network-train/: network-train.component.html  network-train.component.ts
frontend-angular/src/app/networks/: networks.component.html  networks.component.ts
frontend-angular/src/app/networks-and-train/: networks-and-train.component.html  networks-and-train.component.ts
frontend-angular/src/app/project/: project.component.html  project.component.ts
frontend-angular/src/app/project/model-edit/: model-edit.component.html  model-edit.component.ts
frontend-angular/src/app/project/model-train/: model-train.component.html  model-train.component.ts
frontend-angular/src/app/project/models-list/: project-models.component.html  project-models.component.ts
frontend-angular/src/app/projects-and-settings/: projects-and-settings.component.html  projects-and-settings.component.ts
frontend-angular/src/app/projects-and-settings/projects-list/: projects-list.component.html  projects-list.component.ts
frontend-angular/src/app/projects-and-settings/settings/: app-state.service.ts  settings.component.html  settings.component.ts
frontend-angular/src/app/settings/: app-state.service.ts  settings.component.html  settings.component.ts  settings.service.ts
frontend-angular/src/app/settings/selection-view/: selection-view.component.html  selection-view.component.ts
frontend-angular/src/app/test-playground/: test-playground.component.html  test-playground.component.ts
frontend-angular/src/app/test-playground/chart-plotly/: chart-plotly.component.html  chart-plotly.component.ts  chart-plotly.component.ts._
frontend-angular/src/app/util/: Directives.ts  Helper.ts  Log.ts  PublishSubject.ts  ReuseStrategy.ts  ReuseStrategy_ComponentOnce.ts  backendSocket.ts  vendor.d.ts
frontend-angular/src/assets/css/: materialize.css
frontend-angular/src/catflow/: Api.ts  ApiConnection.ts  ApiList.ts  ApiObject.ts  Utils.ts
frontend-angular/src/catflow/extensions/: Chart-series.ts  Chart.ts  chart-range.component.html  chart-series.component.html
frontend/css/: main.css
frontend/css/materialize/: materialize.css  materialize.css.map
frontend/css/materialize/components/: _variables.scss
frontend/js/: BackendSocket.js  Navigation.js  NetworkTrain.js  main.js  network.js
frontend/js/lib/: ASCIIMathML.js  prism.js
frontend/jsonProtocol/: README.md  do.json  updateChart.json
frontend/web/: index.html
frontend/web/css/materialize/: _variables.scss
frontend/web/js/: BackendSocket.js  DataStructuresList.js  Navigation.js  NetworkSettings.js  NetworkTrain.js  NetworksList.js  main.js
trainServer/: CMakeLists.txt
trainServer/cmake/: HunterGate.cmake  buildHelper.cmake
trainServer/dependencies/: .gitignore  CMakeLists.txt
trainServer/dependencies/json/: json.hpp
trainServer/source/: CMakeLists.txt
trainServer/source/include/: ApiRoot.h  Controller.h  DataStructure.h  Frontend.h  JsonList.h  NeuralNetwork.h  SelectorView.h  Settings.h
trainServer/source/include/api/: ApiJsonObject.h  ApiMessage.h  ApiProcessible.h  ApiRoute.h  ApiSubscribable.h  Chart.h  JsonList.h  JsonObject.h
trainServer/source/include/dataStructures/: DataStructure.h
trainServer/source/include/json/: ApiMessage.h  ApiProcessible.h  ApiRoute.h  JsonList.h  JsonObject.h
trainServer/source/include/util/: JsonObject.h  Log.h  TaskManager.h  util.h
trainServer/source/source/: ApiRoot.cpp  Controller.cpp  DataStructure.cpp  Frontend.cpp  JsonList.cpp  NeuralNetwork.cpp  main.cpp  mlp.cpp  mlp_cpu.cpp
trainServer/source/source/api/: ApiJsonObject.cpp  ApiRoute.cpp  ApiSubscribable.cpp  Chart.cpp  JsonList.tpp  JsonObject.cpp
trainServer/source/source/dataStructures/: DataStructure.cpp
trainServer/source/source/json/: ApiRoute.cpp  JsonList.tpp  JsonObject.cpp
trainServer/source/source/util/: Filesystem.cpp  JsonObject.cpp  Log.cpp  TaskManager.cpp
trainServer/test/: ApiTest.cpp  ChartTest.cpp  DebugTest.cpp.cpp  JsonListTest.cpp  JsonObjectTest.cpp  TestHelper.hpp
(+26 files in other folders)
