cmake_minimum_required(VERSION 3.0)

# rpath
SET(CMAKE_INSTALL_RPATH "$ORIGIN/../lib:$ORIGIN/:$ORIGIN/lib:")

# source dir
add_subdirectory(source)




# ----------------------------------
# -- create installer

# libs
file(GLOB LIB_FILES
        ${OUTPUT_LIB}/*.so*
        ${OUTPUT}/*.so
        ${DEPENDENCIES_MXNET_DIR}*.so)
message(STATUS "libs: ${LIB_FILES}")
install(FILES ${LIB_FILES} DESTINATION lib)

# web
install(DIRECTORY ${OUTPUT}/web/ DESTINATION share/openhabai/web/)

# deps
set (CPACK_DEBIAN_PACKAGE_DEPENDS  "libssl1.0.0, libopenblas-base")


if (UNIX)
    #SET(CPACK_GENERATOR "DEB")
    SET(CPACK_DEBIAN_PACKAGE_MAINTAINER ${META_PROJECT_AUTHOR})
endif ()

SET(CPACK_OUTPUT_FILE_PREFIX ${OUTPUT_PACKAGE})
set(CPACK_COMPONENTS_ALL ${INSTALL_COMPONENTS})
set(CPACK_PACKAGE_NAME ${META_PROJECT_NAME})
set(CPACK_PACKAGE_VENDOR "")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY ${META_PROJECT_DESCRIPTION})
set(CPACK_PACKAGE_VERSION ${META_VERSION})
set(CPACK_PACKAGE_VERSION_MAJOR ${META_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${META_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${META_VERSION_PATCH})
set(CPACK_PACKAGE_INSTALL_DIRECTORY ${META_PROJECT_NAME})

include(CPack)
